# snapzip

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  ci-publish.yml  release.yml
pkg/: .npmignore  README.md  index.js  install.js  package.json  pnpm-lock.yaml  tsconfig.json
pkg/__tests__/: snapzip.test.ts
pkg/lib/: index.js
pkg/scripts/: build-binaries.js  ensure-dirs.js
pkg/src/: index.ts
src/: lib.rs  main.rs
