[package]
name = "snapzip"
version = "0.2.0"
edition = "2024"
description = "A blazing fast CLI to compress images"
license = "MIT"

[lib]
name = "snapzip"
path = "src/lib.rs"

[[bin]]
name = "snapzip"
path = "src/main.rs"

[dependencies]
colored = "3.0.0"
image = "0.25.6"
mozjpeg = "0.10.13"
oxipng = "9.1.4"
